--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -254,7 +254,7 @@ h2.title {
   transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 .main-panel > .content {
-  min-height: calc(100% - 123px);
+    min-height: 90%;
 }
 .main-panel > .footer {
   border-top: 1px solid #e7e7e7;
@@ -1281,471 +1281,6 @@ output {
 .label.label-rose {
   background-color: #e91e63;
 }
-/*
-.form-control,
-.form-group .form-control {
-  border: 0;
-  background-image: linear-gradient(#9c27b0, #9c27b0), linear-gradient(#D2D2D2, #D2D2D2);
-  background-size: 0 2px, 100% 1px;
-  background-repeat: no-repeat;
-  background-position: center bottom, center calc(100% - 1px);
-  background-color: transparent;
-  transition: background 0s ease-out;
-  float: none;
-  box-shadow: none;
-  border-radius: 0;
-  font-weight: 400;
-}
-.form-control::-moz-placeholder,
-.form-group .form-control::-moz-placeholder {
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-control:-ms-input-placeholder,
-.form-group .form-control:-ms-input-placeholder {
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-control::-webkit-input-placeholder,
-.form-group .form-control::-webkit-input-placeholder {
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-control[readonly], .form-control[disabled], fieldset[disabled] .form-control,
-.form-group .form-control[readonly],
-.form-group .form-control[disabled], fieldset[disabled]
-.form-group .form-control {
-  background-color: transparent;
-}
-.form-control[disabled], fieldset[disabled] .form-control,
-.form-group .form-control[disabled], fieldset[disabled]
-.form-group .form-control {
-  background-image: none;
-  border-bottom: 1px dotted #D2D2D2;
-}
-
-.form-group {
-  position: relative;
-}
-.form-group.label-static label.control-label, .form-group.label-placeholder label.control-label, .form-group.label-floating label.control-label {
-  position: absolute;
-  pointer-events: none;
-  transition: 0.3s ease all;
-}
-.form-group.label-floating label.control-label {
-  will-change: left, top, contents;
-}
-.form-group.label-placeholder:not(.is-empty) label.control-label {
-  display: none;
-}
-.form-group .help-block {
-  position: absolute;
-  display: none;
-}
-.form-group.is-focused .form-control {
-  outline: none;
-  background-image: linear-gradient(#9c27b0, #9c27b0), linear-gradient(#D2D2D2, #D2D2D2);
-  background-size: 100% 2px, 100% 1px;
-  box-shadow: none;
-  transition-duration: 0.3s;
-}
-.form-group.is-focused .form-control .material-input:after {
-  background-color: #9c27b0;
-}
-.form-group.is-focused.form-info .form-control {
-  background-image: linear-gradient(#00bcd4, #00bcd4), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.form-success .form-control {
-  background-image: linear-gradient(#4caf50, #4caf50), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.form-warning .form-control {
-  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.form-danger .form-control {
-  background-image: linear-gradient(#f44336, #f44336), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.form-rose .form-control {
-  background-image: linear-gradient(#e91e63, #e91e63), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.form-white .form-control {
-  background-image: linear-gradient(#FFFFFF, #FFFFFF), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.is-focused.label-placeholder label,
-.form-group.is-focused.label-placeholder label.control-label {
-  color: #AAAAAA;
-}
-.form-group.is-focused .help-block {
-  display: block;
-}
-.form-group.has-warning .form-control {
-  box-shadow: none;
-}
-.form-group.has-warning.is-focused .form-control {
-  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.has-warning label.control-label,
-.form-group.has-warning .help-block {
-  color: #ff9800;
-}
-.form-group.has-error .form-control {
-  box-shadow: none;
-}
-.form-group.has-error.is-focused .form-control {
-  background-image: linear-gradient(#f44336, #f44336), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.has-error label.control-label,
-.form-group.has-error .help-block {
-  color: #f44336;
-}
-.form-group.has-success .form-control {
-  box-shadow: none;
-}
-.form-group.has-success.is-focused .form-control {
-  background-image: linear-gradient(#4caf50, #4caf50), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.has-success label.control-label,
-.form-group.has-success .help-block {
-  color: #4caf50;
-}
-.form-group.has-info .form-control {
-  box-shadow: none;
-}
-.form-group.has-info.is-focused .form-control {
-  background-image: linear-gradient(#00bcd4, #00bcd4), linear-gradient(#D2D2D2, #D2D2D2);
-}
-.form-group.has-info label.control-label,
-.form-group.has-info .help-block {
-  color: #00bcd4;
-}
-.form-group textarea {
-  resize: none;
-}
-.form-group textarea ~ .form-control-highlight {
-  margin-top: -11px;
-}
-.form-group select {
-  appearance: none;
-}
-.form-group select ~ .material-input:after {
-  display: none;
-}
-
-.form-control {
-  margin-bottom: 7px;
-}
-.form-control::-moz-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-control:-ms-input-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-control::-webkit-input-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-
-.checkbox label,
-.radio label,
-label {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-
-label.control-label {
-  font-size: 11px;
-  line-height: 1.07143;
-  color: #AAAAAA;
-  font-weight: 400;
-  margin: 16px 0 0 0;
-}
-
-.help-block {
-  margin-top: 0;
-  font-size: 11px;
-}
-
-.form-group {
-  padding-bottom: 7px;
-  margin: 27px 0 0 0;
-}
-.form-group .form-control {
-  margin-bottom: 7px;
-}
-.form-group .form-control::-moz-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group .form-control:-ms-input-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group .form-control::-webkit-input-placeholder {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group .checkbox label,
-.form-group .radio label,
-.form-group label {
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group label.control-label {
-  font-size: 11px;
-  line-height: 1.07143;
-  color: #000000;
-  font-weight: 400;
-  margin: 16px 0 0 0;
-}
-.form-group .help-block {
-  margin-top: 0;
-  font-size: 11px;
-}
-.form-group.label-floating label.control-label, .form-group.label-placeholder label.control-label {
-  top: -7px;
-  font-size: 14px;
-  line-height: 1.42857;
-}
-.form-group.label-static label.control-label, .form-group.label-floating.is-focused label.control-label, .form-group.label-floating:not(.is-empty) label.control-label {
-  top: -28px;
-  left: 0;
-  font-size: 11px;
-  line-height: 1.07143;
-}
-.form-group.label-floating input.form-control:-webkit-autofill ~ label.control-label label.control-label {
-  top: -28px;
-  left: 0;
-  font-size: 11px;
-  line-height: 1.07143;
-}
-
-.form-group.form-group-sm {
-  padding-bottom: 3px;
-  margin: 21px 0 0 0;
-}
-.form-group.form-group-sm .form-control {
-  margin-bottom: 3px;
-}
-.form-group.form-group-sm .form-control::-moz-placeholder {
-  font-size: 11px;
-  line-height: 1.5;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-sm .form-control:-ms-input-placeholder {
-  font-size: 11px;
-  line-height: 1.5;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-sm .form-control::-webkit-input-placeholder {
-  font-size: 11px;
-  line-height: 1.5;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-sm .checkbox label,
-.form-group.form-group-sm .radio label,
-.form-group.form-group-sm label {
-  font-size: 11px;
-  line-height: 1.5;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-sm label.control-label {
-  font-size: 9px;
-  line-height: 1.125;
-  color: #AAAAAA;
-  font-weight: 400;
-  margin: 16px 0 0 0;
-}
-.form-group.form-group-sm .help-block {
-  margin-top: 0;
-  font-size: 9px;
-}
-.form-group.form-group-sm.label-floating label.control-label, .form-group.form-group-sm.label-placeholder label.control-label {
-  top: -11px;
-  font-size: 11px;
-  line-height: 1.5;
-}
-.form-group.form-group-sm.label-static label.control-label, .form-group.form-group-sm.label-floating.is-focused label.control-label, .form-group.form-group-sm.label-floating:not(.is-empty) label.control-label {
-  top: -25px;
-  left: 0;
-  font-size: 9px;
-  line-height: 1.125;
-}
-.form-group.form-group-sm.label-floating input.form-control:-webkit-autofill ~ label.control-label label.control-label {
-  top: -25px;
-  left: 0;
-  font-size: 9px;
-  line-height: 1.125;
-}
-
-.form-group.form-group-lg {
-  padding-bottom: 9px;
-  margin: 30px 0 0 0;
-}
-.form-group.form-group-lg .form-control {
-  margin-bottom: 9px;
-}
-.form-group.form-group-lg .form-control::-moz-placeholder {
-  font-size: 18px;
-  line-height: 1.33333;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-lg .form-control:-ms-input-placeholder {
-  font-size: 18px;
-  line-height: 1.33333;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-lg .form-control::-webkit-input-placeholder {
-  font-size: 18px;
-  line-height: 1.33333;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-lg .checkbox label,
-.form-group.form-group-lg .radio label,
-.form-group.form-group-lg label {
-  font-size: 18px;
-  line-height: 1.33333;
-  color: #AAAAAA;
-  font-weight: 400;
-}
-.form-group.form-group-lg label.control-label {
-  font-size: 14px;
-  line-height: 1.0;
-  color: #AAAAAA;
-  font-weight: 400;
-  margin: 16px 0 0 0;
-}
-.form-group.form-group-lg .help-block {
-  margin-top: 0;
-  font-size: 14px;
-}
-.form-group.form-group-lg.label-floating label.control-label, .form-group.form-group-lg.label-placeholder label.control-label {
-  top: -5px;
-  font-size: 18px;
-  line-height: 1.33333;
-}
-.form-group.form-group-lg.label-static label.control-label, .form-group.form-group-lg.label-floating.is-focused label.control-label, .form-group.form-group-lg.label-floating:not(.is-empty) label.control-label {
-  top: -32px;
-  left: 0;
-  font-size: 14px;
-  line-height: 1.0;
-}
-.form-group.form-group-lg.label-floating input.form-control:-webkit-autofill ~ label.control-label label.control-label {
-  top: -32px;
-  left: 0;
-  font-size: 14px;
-  line-height: 1.0;
-}
-
-select.form-control {
-  border: 0;
-  box-shadow: none;
-  border-radius: 0;
-}
-.form-group.is-focused select.form-control {
-  box-shadow: none;
-  border-color: #D2D2D2;
-}
-select.form-control[multiple], .form-group.is-focused select.form-control[multiple] {
-  height: 85px;
-}
-
-.input-group-btn .btn {
-  margin: 0 0 7px 0;
-}
-
-.form-group.form-group-sm .input-group-btn .btn {
-  margin: 0 0 3px 0;
-}
-.form-group.form-group-lg .input-group-btn .btn {
-  margin: 0 0 9px 0;
-}
-
-.input-group .input-group-btn {
-  padding: 0 12px;
-}
-.input-group .input-group-addon {
-  border: 0;
-  background: transparent;
-  padding: 6px 15px 0px;
-}
-
-.form-group input[type=file] {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-}
-
-.form-control-feedback {
-  opacity: 0;
-}
-.has-success .form-control-feedback {
-  color: #4caf50;
-  opacity: 1;
-}
-.has-error .form-control-feedback {
-  color: #f44336;
-  opacity: 1;
-}
-
-.form-horizontal .radio,
-.form-horizontal .checkbox,
-.form-horizontal .radio-inline,
-.form-horizontal .checkbox-inline {
-  padding-top: 0;
-}
-.form-horizontal .radio {
-  margin-bottom: 10px;
-}
-.form-horizontal label {
-  text-align: right;
-}
-.form-horizontal label.control-label {
-  margin: 0;
-}
-
-.form-newsletter .input-group,
-.form-newsletter .form-group {
-  float: left;
-  width: 78%;
-  margin-right: 2%;
-  margin-top: 9px;
-}
-.form-newsletter .btn {
-  float: left;
-  width: 20%;
-  margin: 9px 0 0;
-}
-*/
 .alert {
   border: 0;
   border-radius: 0;
@@ -2985,8 +2520,8 @@ footer ul li a:hover {
   text-decoration: none;
 }
 footer .copyright {
-  padding: 15px 0;
-  margin: 0;
+    font-size: 11px;
+    font-weight: bolder;
 }
 footer .copyright .material-icons {
   font-size: 18px;
@@ -3102,7 +2637,11 @@ footer .btn {
   padding: 15px;
 }
 .card .card-header .title {
-    color: #8b82b0 ;
+    color: #8b82b0;
+    font-size: 18px;
+    text-transform: unset;
+    font-weight: bold;
+    text-align: center;
 }
 .card .card-header .category {
   margin-bottom: 0;
@@ -4604,7 +4143,6 @@ footer .btn {
 label{
   font-size: 12px;
   font-weight: 100;
-  padding-top: 20px;
 
 }
 .form-groups {
